<?xml version="1.0"?>
<package format="2">
  <name>april_krem</name>
  <version>1.0.0</version>
  <description>The april_krem package</description>

  <maintainer email="marcvinci@dfki.de">Marc Vinci</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>grasp_library</exec_depend>

  <export>
  </export>
</package>
